# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added ip-https-discover for detecting support for Microsoft's IP over
  HTTPS tunneling protocol. [Niklaus Schiess]

o [NSE] [GH#229] Improve parsing in http.lua for multiple Set-Cookie headers in
  a single response.  [nnposter]

o [NSE] [GH#194] Add support for reading fragmented TLS messages to
  ssl-enum-ciphers. [Jacob Gajek]

o [Ncat] [GH#193] Fix Ncat listen mode over Unix sockets (named pipes) on OS X.
  This was crashing with the error:
    Ncat: getnameinfo failed: Undefined error: 0 QUITTING.
  Fixed by forcing the name to "localhost" [Michael Wallner]

o [NSE] Added knx-gateway-discover and knx-gateway-info scripts for gathering
  information from multicast and unicast KNX gateways, which connect home
  automation systems to IP networks. [Niklaus Schiess, Dominik Schneider]

o [NSE] Added script http-ls. Parses web server directory index pages with
  optional recursion. [Pierre Lalet]

o [NSE] Added script xmlrpc-methods. This script perfoms introspection of
  xmlrpc services and lists methods and their description. [Gyanendra Mishra]

o [NSE] Added script http-fetch. This script can be used to fetch all files
  from the target, specific files from the target or files that match a  given
  pattern. [Gyanendra Mishra]

o [NSE] Added script http-svn-enum. Enumerates users of a Subversion
  repostory by examinning commit logs. [Gyanendra Mishra]

o [NSE] Added script http-svn-info. Requests information from a
  Subversion repository.[Gyanendra Mishra]

o [NSE] Added hnap-info, detects and outputs info for Home Network
  Administration Protocol devices. [Gyanendra Mishra]

o [NSE] Added http-webdav-scan, which detects WebDAV servers. [Gyanendra Mishra]

o [NSE] Added tor-consensus-checker, which checks if a target is a
  known Tor node. [Jiayi Ye]

o [GH#51] Added IPv6 support to nmap_mass_rdns, improved reverse DNS cache,
  and refactored DNS code to improve readability and